--- a/patterns/jolla-hw-adaptation-sagit.yaml
+++ b/patterns/jolla-hw-adaptation-sagit.yaml
@@ -94,5 +94,8 @@ Requires:
 # For torch
 - jolla-settings-system-flashlight
 
+# For suspend to work with enabled Wi-Fi on newer Qualcomm devices
+- sailfish-connman-plugin-suspend
+
 Summary: Jolla HW Adaptation sagit
 
