--- a/sparse/etc/ofono/ril_subscription.conf
+++ b/sparse/etc/ofono/ril_subscription.conf
@@ -1,3 +1,5 @@
+# Jolla RIL driver configuration file for Redmi K20
+
 [Settings]
 #EmptyConfig=false
 #Identity=radio:radio
@@ -5,19 +7,13 @@
 #SetRadioCapability=auto
 
 SetRadioCapability=off
-emptyPinQuery=false
+emptyPinQuery=true
 radioPowerCycle=false
 confirmRadioPowerOn=false
 
 [ril_0]
-socket=/dev/socket/rild
 transport=binder:name=slot1
 name=slot1
-
-[ril_1]
-socket=/dev/socket/rild2
-transport=binder:name=slot2
-name=slot2
 
 #socket=/dev/socket/rild
 #sub=SUB1
@@ -26,7 +22,6 @@ name=slot2
 #technologies=all
 #enable4G=true
 #uiccWorkaround=true
-#ecclistFile=/var/lib/ofono/ril.ecclist
 #allowDataReq=auto
 #dataCallFormat=auto
 #dataCallRetryLimit=4
