Enable and add config ofono-ril-binder-plugin and bluebinder, nfc.

--- a/patterns/jolla-hw-adaptation-sagit.yaml
+++ b/patterns/jolla-hw-adaptation-sagit.yaml
@@ -21,6 +21,12 @@ Requires:
 - libhybris-libGLESv2
 - libhybris-libwayland-egl
 
+# Telephony
+- ofono-ril-binder-plugin
+
+# Bluetooth
+- bluebinder
+
 # Sensors
 - hybris-libsensorfw-qt5
 
@@ -32,6 +38,8 @@ Requires:
 - qt5-plugin-generic-evdev
 
 - pulseaudio-modules-droid
+#- pulseaudio-modules-droid-glue
+#- pulseaudio-modules-droid-hidl
 # for audio recording to work:
 - qt5-qtmultimedia-plugin-mediaservice-gstmediacapture
 
@@ -72,8 +80,8 @@ Requires:
 #- jolla-mediaplayer-radio
 
 # NFC for devices using Android 8 or newer as base
-#- nfcd-binder-plugin
-#- jolla-settings-system-nfc
+- nfcd-binder-plugin
+- jolla-settings-system-nfc
 
 Summary: Jolla HW Adaptation sagit
 
