--- a/patterns/jolla-configuration-chiron.yaml
+++ b/patterns/jolla-configuration-chiron.yaml
@@ -1,10 +1,10 @@
 # Feel free to disable non-critical HA parts during devel by commenting lines out
 # Generated in hadk by executing: rpm/dhd/helpers/add_new_device.sh
 
-Description: Pattern with packages for sagit configurations
-Name: jolla-configuration-sagit
+Description: Pattern with packages for chiron configurations
+Name: jolla-configuration-chiron
 Requires:
-- pattern:jolla-hw-adaptation-sagit
+- pattern:jolla-hw-adaptation-chiron
 
 - patterns-sailfish-applications
 - patterns-sailfish-ui
@@ -37,5 +37,5 @@ Requires:
 # to improve camera startup times and the like
 - mapplauncherd-booster-silica-qt5-media
 
-Summary: Jolla Configuration sagit
+Summary: Jolla Configuration chiron
 
